# Models/Responses/CabeceraCuotaResponse.cs
@@ -7,6 +7,8 @@ public class CabeceraCuotaResponse
     public int IdVenta { get; set; }
     public string? CedulaCliente { get; set; }
     public string? NombreCliente { get; set; }
+    public string? Telefono { get; set; }
+    public string? Direccion { get; set; }
     public string? IdChasis { get; set; }
     public string? Marca { get; set; }
     public int AnoFabricacion { get; set; }
